--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,7 @@
 	<li><li>
         <li class="pure-menu-selected"><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
+	<li><a href="/login">Login</a></li>
       </ul>
     </div>
 
