--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <form class="pure-form" method="POST">
-      <input type="text" size="75" placeholder="Title" name="title"></input>
+      <input type="text" size="75" placeholder="Username" name="title"></input>
       <br><br><button class="pure-button" name="submit" value="yes">Submit</button>
     </form>
     <br>
