--- a/static/extras.css
+++ b/static/extras.css
@@ -4,15 +4,39 @@ with `html`, `button`, `input`, `select`, and `textarea`. Pure Grids use
 specific font stacks to ensure the greatest OS/browser compatibility.
 */
 #banner {
-    position: absolute;
+    position:absolute;
     top: 0px;
-    left: 100px;
-    right: 0px;
+    left: 110px;
+    right: 110px;
     width: 80%;
-    height: 200px;
+    height: 50%;
     z-index: -1;
 }
+.about {
+    text-align: center;
+    font-size: 45px;
+}
 
+.centered {
+    text-align: center;
+    font-size: 20px;
+}
+
+.form-stuff {
+    font-size: 20px;
+}
+
+.form-stufftwo {
+    font-size: 16px;
+}
+
+.pure-form {
+    position: center;
+    text-align: center;
+    font-size: 20px;
+
+
+}
 .timestamp{
     font-size: 12px;
     color: #666666;
