--- a/templates/about.html
+++ b/templates/about.html
@@ -11,31 +11,33 @@
 <!--[if gt IE 8]><!-->
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
 <!--<![endif]-->
+
 </head>
 
 <div class="pure-g">
-    <div class="pure-u-3-24"></div>
-    <div class="pure-u-1-24"></div>
-    <div class="pure-u-16-24">
-    <!--<img id="banner" src="/static/BLOG_BANNER.jpg" alt="Banner Image"/> -->
-    <br><br><br><br><br><br><br><br><br><br><br><br>
-      <div class="pure-menu pure-menu-open pure-menu-horizontal">
+  <div id="layout" class="pure-g">
+  </div>
+</div>
+
+<div class="pure-g">
+  <div class="pure-u-3-24"></div>
+  <div class="pure-u-1-24"></div>
+  <div class="pure-u-16-24">
+
+    <img id="banner" src="/static/Banner.jpg" alt="Banner Image"/>
+
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div class="pure-menu pure-menu-open pure-menu-horizontal">
       <ul>
-	<li>Mongo<li>
-        <li><a href="/">Home</a></li>
+	<li><li>
+        <li class="pure-menu-selected">MONGO DEMO</li>
         <li class="pure-menu-selected"><a href="/about">About</a></li>
+	<li><a href="/login">Login</a></li>
       </ul>
     </div>
-
-    <h1>About us...</h1>
+    <div class="about">About us...</div>
     <br>
-
-    <br><br><br><br><br><br><br><br><br><br><br><br>
-
-      <center><a href="/">Home</a></center>
-    </div>
-
+  </div>
   <div class="pure-u-1-24"></div>
   <div class="pure-u-3-24"></div>
-
 </div>
