--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,8 @@
         <li class="pure-menu-selected">MONGO DEMO</li>
         <li><a href="/about">About</a></li>
 	<li class="pure-menu-selected"><a href="/login">Login</a></li>
+	<li><a href="/register">Register</a></li>
+
       </ul>
     </div>
     <br>
@@ -43,7 +45,7 @@
       <br><br>
       Password:
       <br>
-      <input class-"form-stuff" type="text" size="30" placeholder="Password" name="passwd"></input>
+      <input class-"form-stuff" type="password" size="30" placeholder="Password" name="passwd"></input>
       <br><br><button class="pure-button" name="submit" value="yes">Submit</button>
     </form>
     <br>
