--- a/templates/register.html
+++ b/templates/register.html
@@ -48,11 +48,11 @@
       <br><br>
       Password:
       <br>
-      <input class="form-stufftwo" type="text" size="30" placeholder="Password" name="passwd"></input>
+      <input class="form-stufftwo" type="password" size="30" placeholder="Password" name="passwd"></input>
       <br><br>
       Re-type Password:
       <br>
-      <input class="form-stufftwo" type="text" size="30" placeholder="Retype Password" name="repasswd"></input>
+      <input class="form-stufftwo" type="password" size="30" placeholder="Retype Password" name="repasswd"></input>
       <br><br>
       First Name:
       <br>
