--- a/templates/about.html
+++ b/templates/about.html
@@ -33,6 +33,8 @@
         <li class="pure-menu-selected">MONGO DEMO</li>
         <li class="pure-menu-selected"><a href="/about">About</a></li>
 	<li><a href="/login">Login</a></li>
+	<li><a href="/register">Register</a></li>
+
       </ul>
     </div>
     <div class="about">About us...</div>
