--- a/templates/register.html
+++ b/templates/register.html
@@ -38,7 +38,9 @@
     </div>
     <br>
     <div class="centered">
+   <!-- jinja goes here / if statement for below/error -->
     Hello, new users! Please fill out this form for your new account:<br>
+    
     </div>
     <br><br>
     <form class="pure-form" method="POST">
