--- a/templates/register.html
+++ b/templates/register.html
@@ -38,9 +38,13 @@
     </div>
     <br>
     <div class="centered">
-   <!-- jinja goes here / if statement for below/error -->
-    Hello, new users! Please fill out this form for your new account:<br>
-    
+      <!-- jinja goes here / if statement for below/error -->
+      
+      {% if reg_error == True: %}
+      Registrations has failed. Please try again. <br>
+      {%else%}
+      Hello, new users! Please fill out this form for your new account:<br>
+      
     </div>
     <br><br>
     <form class="pure-form" method="POST">
