--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,9 @@
 
       </ul>
     </div>
+    {%if reged==True%}
+    Thank you for registering with us. Log in below.
+    {%endif%}
     <br>
     <form class="pure-form" method="POST">
       Username: 
