done with register

--- a/templates/about.html
+++ b/templates/about.html
@@ -32,7 +32,7 @@
 	<li><li>
         <li class="pure-menu-selected">MONGO DEMO</li>
         <li class="pure-menu-selected"><a href="/about">About</a></li>
-	<li><a href="/login">Login</a></li>
+	<li><a href="/">Login</a></li>
 	<li><a href="/register">Register</a></li>
 
       </ul>
