--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
 	<li><li>
         <li class="pure-menu-selected">MONGO DEMO</li>
         <li><a href="/about">About</a></li>
-	<li class="pure-menu-selected"><a href="/login">Login</a></li>
+	<li class="pure-menu-selected"><a href="/">Login</a></li>
 	<li><a href="/register">Register</a></li>
 
       </ul>
