--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,13 @@
       </ul>
     </div>
     <br>
+    <div class="error">
+      {% if error %}
+      Incorrect password! Please try again.<br><br>
+      {% elif notreg %}
+       Username was not recognized. Please register.<br><br>
+      {%endif%}
+    </div>
     <form class="pure-form" method="POST">
       Username: 
       <br>  
