--- a/templates/register.html
+++ b/templates/register.html
@@ -28,12 +28,14 @@
 
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <div class="pure-menu pure-menu-open pure-menu-horizontal">
-      <ul>
+     <ul>
 	<li><li>
         <li class="pure-menu-selected">MONGO DEMO</li>
         <li><a href="/about">About</a></li>
-	<li><a href="/">Login</a></li>	
+	<li><a href="/dashboard">Home</a></li>
+	<li><a href="/">Login</a></li>
 	<li class="pure-menu-selected"><a href="/register">Register</a></li>
+	<li><a href="/loggedin/">User Information</a></li>
       </ul>
     </div>
     <br>
